## ai_models.py
import tensorflow as tf
import torch
import spacy
import cv2
from evidence import Evidence

class AIModels:
    def __init__(self, model_type: str, specialization: str):
        self.model_type = model_type
        self.specialization = specialization
        self.model = self._load_model()

    def _load_model(self):
        if self.model_type == 'tensorflow':
            # Placeholder for loading a TensorFlow model
            # In a real-world scenario, you would load the model from a file or another source
            model = tf.keras.models.Sequential([
                tf.keras.layers.Dense(10, activation='relu'),
                tf.keras.layers.Dense(2, activation='softmax')
            ])
            return model
        elif self.model_type == 'pytorch':
            # Placeholder for loading a PyTorch model
            # In a real-world scenario, you would load the model from a file or another source
            model = torch.nn.Sequential(
                torch.nn.Linear(10, 5),
                torch.nn.ReLU(),
                torch.nn.Linear(5, 2),
                torch.nn.Softmax(dim=1)
            )
            return model
        elif self.model_type == 'spacy':
            # Load a spaCy model for NLP tasks
            return spacy.load('en_core_web_sm')
        elif self.model_type == 'opencv':
            # OpenCV does not have a model loading mechanism like TensorFlow or PyTorch
            # It is typically used for image processing tasks
            pass
        else:
            raise ValueError(f"Unsupported model type: {self.model_type}")

    def analyze(self, evidence: Evidence) -> dict:
        if self.specialization == 'nlp':
            # Perform NLP analysis using spaCy or another model
            doc = self.model(evidence.data['text'])
            return {'entities': [(ent.text, ent.label_) for ent in doc.ents]}
        elif self.specialization == 'image_processing':
            # Perform image processing using OpenCV
            image = cv2.imdecode(evidence.data['image'], cv2.IMREAD_COLOR)
            processed_image = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)  # Example processing
            return {'processed_image': processed_image}
        elif self.specialization == 'deep_learning':
            # Perform deep learning inference using TensorFlow or PyTorch
            input_data = evidence.data['input']
            if self.model_type == 'tensorflow':
                predictions = self.model.predict(input_data)
            elif self.model_type == 'pytorch':
                input_tensor = torch.tensor(input_data)
                predictions = self.model(input_tensor)
            return {'predictions': predictions}
        else:
            raise ValueError(f"Unsupported specialization: {self.specialization}")

class AIModelManager:
    def __init__(self):
        self.ai_models = {}

    def load_models(self):
        # Placeholder for loading multiple models
        # In a real-world scenario, you would load different models based on requirements
        self.ai_models['nlp'] = AIModels('spacy', 'nlp')
        self.ai_models['image'] = AIModels('opencv', 'image_processing')
        self.ai_models['deep_learning'] = AIModels('tensorflow', 'deep_learning')

    def run_investigation(self, case_id: str, evidence_data: dict):
        findings = {}
        for evidence_id, data in evidence_data.items():
            evidence = Evidence(evidence_id, data['type'], data)
            model = self.ai_models.get(data['type'])
            if model:
                findings[evidence_id] = model.analyze(evidence)
            else:
                raise ValueError(f"No AI model found for evidence type: {data['type']}")
        return findings
