
classDiagram
    class Main {
        -InvestigationManager investigation_manager
        +main() str
    }
    class InvestigationManager {
        -CaseManager case_manager
        -AIModelManager ai_model_manager
        +create_case(case_data: dict)
        +assign_ai_models(case_id: str)
        +collect_evidence(case_id: str, evidence_data: dict)
        +generate_report(case_id: str) str
    }
    class AIModelManager {
        -AIModels ai_models
        +load_models()
        +run_investigation(case_id: str, evidence_data: dict)
    }
    class CaseManager {
        -Case case
        +create_case(case_data: dict)
        +get_case(case_id: str) Case
    }
    class Case {
        +case_id: str
        +details: dict
        +evidence: list
        +report: Report
        +add_evidence(evidence_data: dict)
        +generate_report() Report
    }
    class Evidence {
        +evidence_id: str
        +type: str
        +data: dict
    }
    class Report {
        +report_id: str
        +findings: dict
    }
    class AIModels {
        +model_type: str
        +specialization: str
        +analyze(evidence: Evidence) dict
    }
    Main --> InvestigationManager
    InvestigationManager --> CaseManager
    InvestigationManager --> AIModelManager
    CaseManager --> Case
    Case --> Evidence
    Case --> Report
    AIModelManager --> AIModels
